// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<p
  className="sc-bdVaJa ipNZCV sinoui-typography sinoui-typography--overline"
  color="textPrimary"
  type="overline"
>
  Overline
</p>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdVaJa ipNZCV sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </h2>,
  <p
    className="sc-bdVaJa eOULuq sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdVaJa gvleOr sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdVaJa ckGxJo sinoui-typography sinoui-typography--overline"
    color="success"
    type="overline"
  >
    Overline
  </p>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <p
    className="sc-bdVaJa ipNZCV sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdVaJa iZjWRF sinoui-typography sinoui-typography--overline"
    color="primary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdVaJa fPPez sinoui-typography sinoui-typography--overline"
    color="secondary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdVaJa ipNZCV sinoui-typography sinoui-typography--overline"
    color="textPrimary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdVaJa kGesJL sinoui-typography sinoui-typography--overline"
    color="textSecondary"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdVaJa cAhCnp sinoui-typography sinoui-typography--overline"
    color="error"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdVaJa jAGTVX sinoui-typography sinoui-typography--overline"
    color="warning"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdVaJa ckGxJo sinoui-typography sinoui-typography--overline"
    color="success"
    type="overline"
  >
    Overline
  </p>,
  <p
    className="sc-bdVaJa knfRiK sinoui-typography sinoui-typography--overline"
    color="info"
    type="overline"
  >
    Overline
  </p>,
]
`;
